# personal-history-db-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/phdb_mcp/: __init__.py  server.py
tests/: test_server.py
