[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-history-db-mcp"
version = "0.1.0"
description = "MCP server plugin for personal-history-db — exposes the phdb query layer as Claude-compatible tools."
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Rob Fischer" }]
dependencies = [
    "personal-history-db>=0.2.0",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
personal-history-db-mcp = "phdb_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.uv.sources]
personal-history-db = { path = "../personal-history-db", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
