[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-history-db-mcp"
version = "0.2.0"
description = "MCP server plugin for personal-history-db — exposes the phdb query layer as Claude-compatible tools."
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Rob Fischer" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "personal-history-db>=0.3.0",
    "mcp>=1.2.0",
]

[project.urls]
Repository = "https://github.com/robfischer1/personal-history-db-mcp"
Homepage = "https://github.com/robfischer1/personal-history-db-mcp"
Documentation = "https://github.com/robfischer1/personal-history-db-mcp/tree/main/docs"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
personal-history-db-mcp = "phdb_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.uv.sources]
personal-history-db = { git = "https://github.com/robfischer1/personal-history-db.git", tag = "v0.3.0" }

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
